--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce consultant with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
-seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps bestpractices to facilitate agile development methodologies and deliver high-quality software solutions.
-       </br>
+          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven Salesforce consultant with extensive 4 experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce configuration features including Objects, Fields, Validations Rules, Flow Triggers, Screen flows, Approval Processes, Workflow rules, Custom Notifications, Email Alerts, etc. Also has extensive experience on Salesforce and AWS DevOps processes to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps best practices to facilitate agile development methodologies and deliver high-quality software solutions.
     </br>
     
        </div> <!-- end .main-col -->
@@ -109,8 +107,8 @@ seamless integration between development, operations, and quality assurance. Str
          <div class="row item">
 
             <div class="twelve columns">
-
-              <h3> Scripting Language (Python, Bash/Shell scripting, Apex programming) </h3>
+		    <h3>Salesforce technologies: Custom Objects, Roles and Profiles, Screen Flows, Flow Triggers, Process Builder, Workflows, Assignment Rules, SOQL, SOSL, Approval process, Triggers, Record Type, Dashboard, Security, Custom Field, reports, Apex Classes/Controllers, Apex Trigger, Lightning Experience, Lightning Pages, Experience cloud, Sales cloud.
+		    </h3>
                <!-- <p class="info"><em class="date">March 2023</em></p> -->
 
             </div>
@@ -132,7 +130,7 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-               <h3>Framework (Puppet, Terraform, Docker, Kubernetes, Jenkins, GitLab CI/CD, AWS CloudFormation, Azure, DevOps),
+               <h3>Framework (Terraform, Jenkins, GitLab CI/CD, AWS CloudFormation, DevOps),
             </h3>
                <!-- <p class="info"><em class="date">July 2020</em></p> -->
 
@@ -143,9 +141,9 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-               <h3>Salesforce technologies: Custom Objects, Roles and Profiles, Screen Flows, Flow Triggers, Process Builder, Workflows, Assignment Rules, SOQL, SOSL, Approval process, Triggers, Record Type, Dashboard, Security, Custom Field, reports, Apex Classes/Controllers, Apex Trigger, Lightning Experience, Lightning Pages, Experience cloud, Sales cloud.
-
+            <h3> Scripting Language (Python, Bash/Shell scripting, Apex programming)                
             </h3>
+
                <!-- <p class="info"><em class="date">July 2020</em></p> -->
 
             </div>
@@ -156,9 +154,9 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-               <h4>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Nagios, Maven, GitHub, Docker, Kubernetes, 
+               <h3>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Nagios, GitHub, 
  Nexus, ELK, Grafana, Prometheus)
-            </h4>
+            </h3>
                <!-- <p class="info"><em class="date">February 2021</em></p> -->
 
             </div>
@@ -249,20 +247,20 @@ seamless integration between development, operations, and quality assurance. Str
     <p>
 <li>Proficient in analyzing and resolving Salesforce-related incidents and issues, providing timely solutions and collaborating with cross-functional teams to maintain a stable Salesforce environment.</li>
 <li>Integrated Salesforce with email systems for seamless communication, enabling sales representatives to engage with prospects and clients more effectively.</li>
-<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
 <li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
 <li>Implemented data quality initiatives within Salesforce to maintain accurate and consistent data, reducing data discrepancies and enhancing reporting accuracy.</li>
-<li>Chose AWS CloudFormation and ARM templates for infrastructure provisioning due to their declarative approach, enabling
-consistent and automated infrastructure deployment across both AWS and Azure.</li>
-<li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration
-within the team.</li>
-<li>Leveraged Ansible and Azure Automation for Configuration Management. Opted for Ansible due to its agentless architecture,
-making it lightweight and easily scalable.</li>
-<li>Integrated Azure Automation alongside Ansible to manage configuration across Azure resources, enabling comprehensive
-configuration management for the multi-cloud environment.</li>
+<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
+<li>Gained knowledge by working with tools like Git for Source Version Controlling, and JIRA as a project management tool.</li>
+<li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration among a team of 15 developers, ensuring version control for over 5,000 code commits.</li>
+<li>Maintaining GIT pipelines for environments and release specific branches.</li>
+<li> Built jobs to automate deployments between salesforce environments using Jenkins.</li>
+<li>Chose AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling
+consistent and automated infrastructure deployment across AWS</li>
 <li>Utilized AWS CloudWatch for monitoring AWS resources, Azure Monitor for Azure resources, and ELK Stack for log
 aggregation, analysis, and visualization</li>
-
+<li>Assisted in the collection and documentation of user's requirements, development of user stories, estimates and work plans</li>
+<li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration
+within the team.</li>
 </div>
 
 </div> <!-- item end -->
@@ -275,19 +273,11 @@ aggregation, analysis, and visualization</li>
     
 <li>Integrated third-party applications from Salesforce AppExchange to enhance the functionality and capabilities of Salesforce Sales Cloud.</li>
 <li>Regularly updated and maintained the Salesforce platform, ensuring that it stays current with the latest features and security updates.</li>
-<li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration
-among a team of 15 developers, ensuring version control for over 5,000 code commits.</li>
 <li>Provided effective troubleshooting and support to resolve Salesforce-related issues and inquiries, supporting the sales team in their daily operations.</li>
 <li>Utilized Salesforce automation tools, such as Process Builder, Workflow Rules, and Flow, to automate business processes, reducing manual efforts and enhancing operational efficiency within Salesforce Sales Cloud.</li>
+<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
 <li>Proficient in Salesforce release management, including sandbox utilization, change set deployments, and release planning, ensuring smooth and controlled transitions of changes across different Salesforce environments.</li>
 <li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
-<li>Configured and automated CI processes using Jenkins, reducing build and test cycle times by 40% and enabling the integration
-of code changes from multiple developers on a daily basis.</li>
-<li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and
-Kubernetes,resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
-<li>Utilized Docker to containerize the application, leading to a 30% reduction in deployment time and improved consistency
-across development, testing, and production environments.</li>
-
 </div>
 
 </div> <!-- item end -->
