--- a/index.html
+++ b/index.html
@@ -245,19 +245,12 @@
     <h3>American Express | Eficens Systems Inc</h3>
     <p class="info"> Salesforce Consultant + DevOps <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
     <p>
-<li>Proficient in analyzing and resolving Salesforce-related incidents and issues, providing timely solutions and collaborating with cross-functional teams to maintain a stable Salesforce environment.</li>
-<li>Integrated Salesforce with email systems for seamless communication, enabling sales representatives to engage with prospects and clients more effectively.</li>
-<li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
-<li>Implemented data quality initiatives within Salesforce to maintain accurate and consistent data, reducing data discrepancies and enhancing reporting accuracy.</li>
-<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
-<li>Gained knowledge by working with tools like Git for Source Version Controlling, and JIRA as a project management tool.</li>
-<li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration among a team of 15 developers, ensuring version control for over 5,000 code commits.</li>
-<li>Maintaining GIT pipelines for environments and release specific branches.</li>
-<li> Built jobs to automate deployments between salesforce environments using Jenkins.</li>
 <li>Chose AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling
 consistent and automated infrastructure deployment across AWS</li>
 <li>Utilized AWS CloudWatch for monitoring AWS resources, Azure Monitor for Azure resources, and ELK Stack for log
 aggregation, analysis, and visualization</li>
+<li>Leveraged Ansible and Azure Automation for Configuration Management. Opted for Ansible due to its agentless architecture, making it lightweight and easily scalable.</li>
+<li>Integrated Azure Automation alongside Ansible to manage configuration across Azure resources, enabling comprehensive configuration management for the multi-cloud environment. </li>
 <li>Assisted in the collection and documentation of user's requirements, development of user stories, estimates and work plans</li>
 <li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration
 within the team.</li>
@@ -271,13 +264,11 @@ within the team.</li>
        <h3>Bened Software Solutions Inc </h3>
       <p><strong></strong>Salesforce Consultant <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
     
-<li>Integrated third-party applications from Salesforce AppExchange to enhance the functionality and capabilities of Salesforce Sales Cloud.</li>
-<li>Regularly updated and maintained the Salesforce platform, ensuring that it stays current with the latest features and security updates.</li>
-<li>Provided effective troubleshooting and support to resolve Salesforce-related issues and inquiries, supporting the sales team in their daily operations.</li>
-<li>Utilized Salesforce automation tools, such as Process Builder, Workflow Rules, and Flow, to automate business processes, reducing manual efforts and enhancing operational efficiency within Salesforce Sales Cloud.</li>
-<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
-<li>Proficient in Salesforce release management, including sandbox utilization, change set deployments, and release planning, ensuring smooth and controlled transitions of changes across different Salesforce environments.</li>
-<li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
+<li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and Kubernetes, resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li> 
+<li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration among a team of 15 developers and ensuring version control for over 5,000 code commits. </li>
+<li>Configured and automated CI processes using Jenkins, reducing build and test cycle times by 40% and enabling the integration of code changes from multiple developers on a daily basis. </li>
+<li>Utilized Docker to containerize the application, leading to a 30% reduction in deployment time and improved consistency across development, testing, and production environments.</li> 
+<li>Leveraged Kubernetes for container orchestration, enabling seamless scaling and load balancing, which resulted in a 25% improvement in application performance during high-demand periods.</li>
 </div>
 
 </div> <!-- item end -->
@@ -288,14 +279,13 @@ within the team.</li>
     <h3>Amazon, India</h3>
         <p><strong></strong> Analyst <span>&bull;</span> <em class="date">Oct 2017 - Jul 2018</em></p>
             
-<li>Created interactive data visualizations using tools like Tableau or Power BI to present complex data in a clear and comprehensible manner, aiding stakeholders in understanding and acting upon data trends.</li>
-<li>Collaborated with cross-functional teams to identify process bottlenecks and inefficiencies, leading process optimization initiatives that resulted in cost savings and enhanced productivity.</li>
-<li>Conducted ad hoc analysis to address specific business questions or challenges, providing timely solutions to support executive decision-making.</li>
-<li>Conducted in-depth data analysis, using tools like SQL and Python, to generate actionable insights and reports, facilitating data-driven decision-making for business units.</li>
-<li>Developed and maintained key performance indicators (KPIs) and performance metrics, allowing teams to measure and improve operational efficiency and customer experience.</li>
-<li>Worked closely with diverse teams, including operations, marketing, and finance, to align data analysis and insights with company objectives and deliver actionable recommendations.</li>
-<li>Kept the customer at the forefront of all decision-making, aligning analysis and recommendations with Amazon's commitment to providing excellent customer experiences.</li>
-
+<li>Implemented Git for version control, established effective branching strategies, and facilitated code reviews, resulting in a 30% decrease in merge conflicts and improved code quality as per industry standards.</li> 
+<li>Configured build processes using Jenkins and/or AWS CodeBuild, reducing build times by 40% and enabling faster feedback loops for developers. </li>
+<li>Implemented infrastructure automation using AWS CloudFormation, Terraform, and Ansible, resulting in a 50% reduction in infrastructure provisioning time and increased consistency in environment setups. </li>
+<li>Led the design and architecture of a highly scalable and reliable Continuous Integration and Deployment (CI/CD) pipeline for a microservices architecture, enabling seamless software delivery across multiple environments.</li> 
+<li>Dockerized microservices for containerization, leading to a 60% improvement in deployment speed and resource utilization.</li>
+<li>Implemented Kubernetes for container orchestration, ensuring efficient scaling and zero-downtime deployments.</li>
+<li>Integrated monitoring and logging solutions like AWS CloudWatch, ELK Stack, and Prometheus, reducing mean time to detect and resolve issues by 50%. Set up proactive alerts and notifications, resulting in a 40% reduction in production incidents. </li>
 
 </p>
     </div>
