--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven Salesforce consultant with extensive 4 experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce configuration features including Objects, Fields, Validations Rules, Flow Triggers, Screen flows, Approval Processes, Workflow rules, Custom Notifications, Email Alerts, etc. Also has extensive experience on Salesforce and AWS DevOps processes to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps best practices to facilitate agile development methodologies and deliver high-quality software solutions.
+          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 4 experience in designing, implementing, and managing cloud-based infrastructure solutions.  Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps best practices to facilitate agile development methodologies and deliver high-quality software solutions.
     </br>
     
        </div> <!-- end .main-col -->
