--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 4 experience in designing, implementing, and managing cloud-based infrastructure solutions.  Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps best practices to facilitate agile development methodologies and deliver high-quality software solutions.
+          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 5 experience in designing, implementing, and managing cloud-based infrastructure solutions.  Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps/SRE best practices to facilitate agile development methodologies and deliver high-quality software solutions.
     </br>
     
        </div> <!-- end .main-col -->
@@ -152,7 +152,7 @@
 
             <div class="twelve columns">
 
-               <h3>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Nagios, GitHub, 
+               <h3>Others (Amazon Web Services (AWS), Microsoft Azure, Salesforce, Microsoft Azure, JIRA, Linux, Nagios, GitHub, 
  Nexus, ELK, Grafana, Prometheus)
             </h3>
                <!-- <p class="info"><em class="date">February 2021</em></p> -->
@@ -243,15 +243,21 @@
     <h3>American Express | Eficens Systems Inc</h3>
     <p class="info"> DevOps Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
     <p>
-<li>Chose AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling
-consistent and automated infrastructure deployment across AWS</li>
-<li>Utilized AWS CloudWatch for monitoring AWS resources, Azure Monitor for Azure resources, and ELK Stack for log
-aggregation, analysis, and visualization</li>
-<li>Leveraged Ansible and Azure Automation for Configuration Management. Opted for Ansible due to its agentless architecture, making it lightweight and easily scalable.</li>
-<li>Integrated Azure Automation alongside Ansible to manage configuration across Azure resources, enabling comprehensive configuration management for the multi-cloud environment. </li>
-<li>Assisted in the collection and documentation of user's requirements, development of user stories, estimates and work plans</li>
-<li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration
-within the team.</li>
+<li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies
+and implement effective solutions.</li>
+<li>Worked on AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling consistent and automated infrastructure deployment across AWS</li>
+<li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration within the team.</li>
+<li>Worked in Python, Bash, and Java, enabling the development of robust and efficient solutions for automation, scripting, and infrastructure as
+code (IAC).</li>
+<li>Automated critical operations tasks, including backup, patching, provisioning, configuration management, and release management, optimizing
+efficiency and reducing manual intervention.</li>
+<li>Established and maintained CI/CD pipelines using industry-leading tools such as Jenkins, Code Deploy, Code Pipeline, and Terraform. Ensured
+streamlined code integration, testing, and deployment processes.</li>
+<li>Worked in security aspects, including IAM roles, OAuth, SSO (Single Sign-On), CloudTrail, and CloudWatch. Committed to ensuring a secure
+and compliant cloud environment.</li>
+<li>Demonstrated proficiency in containerization and orchestration technologies such as Docker, Kubernetes, and ECS. Successfully orchestrated
+and managed containerized applications in cloud environments.</li>
+<li>Demonstrated a rapid learning curve, staying abreast of evolving technologies and best practices within the DevOps and cloud ecosystem.</li>
 </div>
 
 </div> <!-- item end -->
