added the latest experience in my resume

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 5 experience in designing, implementing, and managing cloud-based infrastructure solutions.  Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps/SRE best practices to facilitate agile development methodologies and deliver high-quality software solutions.
+          <p> Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 5 experience in designing, implementing, and managing cloud-based infrastructure solutions. Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps/SRE best practices to facilitate agile development methodologies and deliver high-quality software solutions.
     </br>
     
        </div> <!-- end .main-col -->
@@ -236,6 +236,30 @@
 
         <div class="nine columns main-col">
 
+                    <div class="row item">
+
+              <div class="twelve columns">
+ 
+    <h3>Walmart Inc</h3>
+    <p class="info"> Software Engineer III DevOps & MLOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
+    <p>
+<li>Collaborating with cross-functional teams to design, develop, and maintain scalable and reliable CI/CD pipelines for
+software applications and machine learning models.</li>
+<li>Implementing and optimizing infrastructure-as-code solutions to ensure efficient provisioning, configuration, and
+management of cloud resources.</li>
+<li>Monitoring and maintaining the performance, availability, and security of applications and ML models in production
+environments.</li>
+<li>Developing and implementing best practices for version control, testing, and deployment of software applications
+and ML models.</li>
+<li>Continuously improving the automation of development, testing, and deployment processes to enhance
+productivity and reduce time-to-market.</li>
+<li>Troubleshooting and resolving issues related to application performance, deployment, and infrastructure.</li>
+<li>Staying up to date with the latest industry trends and technologies in DevOps and MLOps to drive innovation and
+improve the overall development lifecycle.</li>
+
+</div>
+
+</div> <!-- item end -->
            <div class="row item">
 
               <div class="twelve columns">
