updated the changes

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ improve the overall development lifecycle.</li>
               <div class="twelve columns">
  
     <h3>American Express | Eficens Systems Inc</h3>
-    <p class="info"> DevOps Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
+    <p class="info"> DevOps Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Dec 2023</em></p>
     <p>
 <li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies
 and implement effective solutions.</li>
