updated the resume

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
          <div class="nine columns main-col">
             <h2>ABOUT ME</h2>
             <p>
-               Hi, I'm Pavani Panuganti, Highly skilled and results-driven DevOps Engineer/consultant with extensive 5 experience in designing, implementing, and managing cloud-based infrastructure solutions. Adept at collaborating with cross-functional teams to ensure seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps/SRE best practices to facilitate agile development methodologies and deliver high-quality software solutions.
-               </br>
+               Hi, I’m Pavani Panuganti — a results-oriented DevOps Engineer and Consultant with around 7 years of experience designing, deploying, and managing scalable cloud infrastructure. I specialize in automation, CI/CD pipelines, and configuration management, with a strong focus on enhancing system reliability and accelerating software delivery. Skilled at bridging development, operations, and QA teams, I bring a collaborative mindset and a passion for optimizing workflows through DevOps and SRE best practices. My goal is to drive efficiency, support agile development, and ensure the delivery of high-quality, resilient software solutions               </br>
             </p>
          </div>
       </div>
@@ -131,22 +130,22 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Walmart Inc</h3>
-                  <p class="info">Software Engineer III DevOps & MLOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
+                  <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
                   <ul>
-                     <li>Collaborating with cross-functional teams to design, develop, and maintain scalable and reliable CI/CD pipelines for software applications and machine learning models.</li>
+                     <li>Collaborating with cross-functional teams to design, develop, and maintain scalable and reliable CI/CD pipelines for software applications.</li>
                      <li>Implementing and optimizing infrastructure-as-code solutions to ensure efficient provisioning, configuration, and management of cloud resources.</li>
-                     <li>Monitoring and maintaining the performance, availability, and security of applications and ML models in production environments.</li>
-                     <li>Developing and implementing best practices for version control, testing, and deployment of software applications and ML models.</li>
+                     <li>Monitoring and maintaining the performance, availability, and security of applications in production environments.</li>
+                     <li>Developing and implementing best practices for version control, testing, and deployment of software applications.</li>
                      <li>Continuously improving the automation of development, testing, and deployment processes to enhance productivity and reduce time-to-market.</li>
                      <li>Troubleshooting and resolving issues related to application performance, deployment, and infrastructure.</li>
-                     <li>Staying up to date with the latest industry trends and technologies in DevOps and MLOps to drive innovation and improve the overall development lifecycle.</li>
+                     <li>Staying up to date with the latest industry trends and technologies in DevOps to drive innovation and improve the overall development lifecycle.</li>
                   </ul>
                </div>
             </div>
             <div class="row item">
                <div class="twelve columns">
                   <h3>American Express | Eficens Systems Inc</h3>
-                  <p class="info">DevOps Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Dec 2023</em></p>
+                  <p class="info"> Software (DevOps) Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Dec 2023</em></p>
                   <ul>
                      <li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies and implement effective solutions.</li>
                      <li>Worked on AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling consistent and automated infrastructure deployment across AWS</li>
@@ -155,6 +154,8 @@
                      <li>Automated critical operations tasks, including backup, patching, provisioning, configuration management, and release management, optimizing efficiency and reducing manual intervention.</li>
                      <li>Established and maintained CI/CD pipelines using industry-leading tools such as Jenkins, Code Deploy, Code Pipeline, and Terraform. Ensured streamlined code integration, testing, and deployment processes.</li>
                      <li>Worked in security aspects, including IAM roles, OAuth, SSO (Single Sign-On), CloudTrail, and CloudWatch. Committed to ensuring a secure and compliant cloud environment.</li>
+                     <li>Created scalable, modular Terraform codebases to manage the networking (VPC subnets), compute (EC2, EKS, AKS), Databases (PostgreSQL, RDS) and storage (S3 and Blob) </li>
+                     <li>Integrated Terraform fmt, validate, plan, apply into CICD pipelines for automated provisioning. </li>
                      <li>Demonstrated proficiency in containerization and orchestration technologies such as Docker, Kubernetes, and ECS. Successfully orchestrated and managed containerized applications in cloud environments.</li>
                      <li>Demonstrated a rapid learning curve, staying abreast of evolving technologies and best practices within the DevOps and cloud ecosystem.</li>
                   </ul>
@@ -163,7 +164,7 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Bened Software Solutions Inc</h3>
-                  <p><strong></strong>DevOps Engineer <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
+                  <p><strong></strong> Software DevOps Engineer <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
                   <ul>
                      <li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and Kubernetes, resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
                      <li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration among a team of 15 developers and ensuring version control for over 5,000 code commits. </li>
