--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="row item">
                <div class="twelve columns">
-                  <h3>Framework (Terraform, Jenkins, GitLab CI/CD, AWS CloudFormation, DevOps),</h3>
+                  <h3>Terraform, Jenkins, GitLab CI/CD, AWS CloudFormation, DevOps,</h3>
                </div>
             </div>
             <div class="row item">
@@ -108,6 +108,11 @@
             </div>
             <div class="row item">
                <div class="twelve columns">
+                  <h3>Terraform Certified Associate - Associate</h3>
+                  <p class="info"><em class="date">May 2025- May 2027</em></p>
+               </div>
+            <div class="row item">
+               <div class="twelve columns">
                   <h3>Salesforce Certified Admin</h3>
                   <p class="info"><em class="date">Aug 2020- Apr 2022</em></p>
                </div>
@@ -129,16 +134,24 @@
          <div class="nine columns main-col">
             <div class="row item">
                <div class="twelve columns">
-                  <h3>Walmart Inc</h3>
+                  <h3>Walmart Inc</h3> <img class="profile-pic" src="" alt=""C:\Users\pavan\Downloads\walmart.jpeg"" />
                   <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
                   <ul>
-                     <li>Collaborating with cross-functional teams to design, develop, and maintain scalable and reliable CI/CD pipelines for software applications.</li>
-                     <li>Implementing and optimizing infrastructure-as-code solutions to ensure efficient provisioning, configuration, and management of cloud resources.</li>
-                     <li>Monitoring and maintaining the performance, availability, and security of applications in production environments.</li>
-                     <li>Developing and implementing best practices for version control, testing, and deployment of software applications.</li>
-                     <li>Continuously improving the automation of development, testing, and deployment processes to enhance productivity and reduce time-to-market.</li>
-                     <li>Troubleshooting and resolving issues related to application performance, deployment, and infrastructure.</li>
-                     <li>Staying up to date with the latest industry trends and technologies in DevOps to drive innovation and improve the overall development lifecycle.</li>
+                     <li>Collaborate with cross-functional teams to design, develop, and maintain scalable CI/CD pipelines supporting embedded software development and validation workflows.</li>
+                     <li>Implement and optimize Infrastructure-as-Code (IaC) solutions for efficient provisioning and configuration of test environments and cloud resources.</li>
+                     <li>Monitor and maintain performance, availability, and security across embedded system deployments and test infrastructure in production-like environments.</li>
+                     <li>Drive best practices in version control (Git), test automation, and deployment strategies to ensure reliable and repeatable software releases.</li>
+                     <li>Continuously enhance automation across development, testing, and release stages to reduce time-to-market and increase build/test efficiency.</li>
+                     <li>Maintain and extend Docker-based test environments to simulate real-world scenarios for embedded builds and system-level validation.</li>
+                     <li>Work closely with development and product teams to translate technical requirements into robust automated test cases and validation plans.</li>
+                     <li>Refactor and scale existing automation frameworks to support evolving hardware platforms and software modules, ensuring long-term maintainability.</li>
+                     <li>Use JIRA and TestRail for tracking test cases, execution cycles, and defect lifecycle management across QA and development teams.</li>
+                     <li>Investigate and resolve infrastructure and deployment issues, improving reliability and reducing downtime in CI/CD pipelines.</li>
+                     <li>Evaluate and integrate tools for monitoring, test reporting, and hardware diagnostics to improve test transparency and developer feedback loops.</li>
+                     <li>Stay current with industry trends in DevOps, embedded QA, and automation tooling to propose innovations that enhance team workflows.</li>
+                     <li>Participate in sprint planning and release reviews, contributing detailed QA reports and quality metrics for informed go/no-go decisions.</li>
+                  </ul>
+
                   </ul>
                </div>
             </div>
@@ -149,8 +162,11 @@
                   <ul>
                      <li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies and implement effective solutions.</li>
                      <li>Worked on AWS CloudFormation for infrastructure provisioning due to their declarative approach, enabling consistent and automated infrastructure deployment across AWS</li>
+                     <li>Developed and maintained automated test scripts in Python to validate firmware and Linux applications, reducing manual testing time by over 50%.</li>
                      <li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration within the team.</li>
+                     <li>Set up build jobs in Jenkins to achieve Continuous Integration and performed code-level configuration checks to resolve build issues. </li>
                      <li>Worked in Python, Bash, and Java, enabling the development of robust and efficient solutions for automation, scripting, and infrastructure as code (IAC).</li>
+                     <li>Integrated automated test suites into Jenkins and GitLab CI pipelines, enabling nightly test runs and continuous feedback for the dev team.</li>
                      <li>Automated critical operations tasks, including backup, patching, provisioning, configuration management, and release management, optimizing efficiency and reducing manual intervention.</li>
                      <li>Established and maintained CI/CD pipelines using industry-leading tools such as Jenkins, Code Deploy, Code Pipeline, and Terraform. Ensured streamlined code integration, testing, and deployment processes.</li>
                      <li>Worked in security aspects, including IAM roles, OAuth, SSO (Single Sign-On), CloudTrail, and CloudWatch. Committed to ensuring a secure and compliant cloud environment.</li>
@@ -177,10 +193,13 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Amazon, India</h3>
-                  <p><strong></strong> DevOps Engineer <span>&bull;</span> <em class="date">Oct 2017 - Jul 2018</em></p>
+                  <p><strong></strong> Analyst <span>&bull;</span> <em class="date">Oct 2017 - Jul 2018</em></p>
                   <ul>
+                     <li>Supported the beta phase and real-time phase of the development projects (TRON operations and machine learning process) that are implemented and developed in MKE-1 fulfillment centers as a non-variable associate. </li>
                      <li>Implemented Git for version control, established effective branching strategies, and facilitated code reviews, resulting in a 30% decrease in merge conflicts and improved code quality as per industry standards.</li>
                      <li>Configured build processes using Jenkins and/or AWS CodeBuild, reducing build times by 40% and enabling faster feedback loops for developers. </li>
+                     <li>Proven expertise in management and development activities by bridging requirement analysis, development, management, and client interaction.</li>
+                     <li>Developed & and reported periodic KPIs, maintained database, and prepared reports for smooth workflow</li>
                      <li>Implemented infrastructure automation using AWS CloudFormation, Terraform, and Ansible, resulting in a 50% reduction in infrastructure provisioning time and increased consistency in environment setups. </li>
                      <li>Led the design and architecture of a highly scalable and reliable Continuous Integration and Deployment (CI/CD) pipeline for a microservices architecture, enabling seamless software delivery across multiple environments.</li>
                      <li>Dockerized microservices for containerization, leading to a 60% improvement in deployment speed and resource utilization.</li>
