--- a/index.html
+++ b/index.html
@@ -134,9 +134,12 @@
          <div class="nine columns main-col">
             <div class="row item">
                <div class="twelve columns">
-                  <h3>Walmart Inc</h3> <img class="profile-pic" src="" alt=""C:\Users\pavan\Downloads\walmart.jpeg"" />
-                  <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
-                  <ul>
+                 <h3>
+                   <img class="profile-pic" src="C:/Users/pavan/Downloads/walmart.jpeg" alt="Walmart Logo" style="width:24px; height:24px; vertical-align:middle; margin-right:8px;">
+                   Walmart Inc
+                 </h3>
+                 <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
+                 <ul>
                      <li>Collaborate with cross-functional teams to design, develop, and maintain scalable CI/CD pipelines supporting embedded software development and validation workflows.</li>
                      <li>Implement and optimize Infrastructure-as-Code (IaC) solutions for efficient provisioning and configuration of test environments and cloud resources.</li>
                      <li>Monitor and maintain performance, availability, and security across embedded system deployments and test infrastructure in production-like environments.</li>
