--- a/index.html
+++ b/index.html
@@ -94,36 +94,37 @@
       <!-- Certifications -->
       <div class="row education">
          <div class="three columns header-col">
-            <h1><span>Certifications</span></h1>
+         <h1><span>Certifications</span></h1>
          </div>
          <div class="nine columns main-col">
-            <div class="row item">
-               <div class="twelve columns"></div>
+         <div class="row item">
+            <div class="twelve columns"></div>
+         </div>
+         <div class="row item">
+            <div class="twelve columns">
+            <h3>AWS Certified Cloud Practitioner</h3>
+            <p class="info"><em class="date">Apr 2023 - Apr 2026</em></p>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>AWS Certified Cloud Practitioner</h3>
-                  <p class="info"><em class="date">Apr 2023- Apr 2026</em></p>
-               </div>
+         </div>
+         <div class="row item">
+            <div class="twelve columns">
+            <h3>Terraform Certified Associate</h3>
+            <p class="info"><em class="date">May 2025 - May 2027</em></p>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>Terraform Certified Associate - Associate</h3>
-                  <p class="info"><em class="date">May 2025- May 2027</em></p>
-               </div>
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>Salesforce Certified Admin</h3>
-                  <p class="info"><em class="date">Aug 2020- Apr 2022</em></p>
-               </div>
+         </div>
+         <div class="row item">
+            <div class="twelve columns">
+            <h3>Salesforce Certified Admin</h3>
+            <p class="info"><em class="date">Aug 2020 - Apr 2022</em></p>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-                  <h3>Salesforce Certified Platform Developer 1</h3>
-                  <p class="info"><em class="date">Aug 2020- Dec 2021</em></p>
-               </div>
+         </div>
+         <div class="row item">
+            <div class="twelve columns">
+            <h3>Salesforce Certified Platform Developer 1</h3>
+            <p class="info"><em class="date">Aug 2020 - Dec 2021</em></p>
             </div>
-            <div class="row item"></div>
+         </div>
+         <div class="row item"></div>
          </div>
       </div>
       <!-- Work -->
@@ -135,7 +136,7 @@
             <div class="row item">
                <div class="twelve columns">
                  <h3>
-                   <img class="profile-pic" src="C:/Users/pavan/Downloads/walmart.jpeg" alt="Walmart Logo" style="width:24px; height:24px; vertical-align:middle; margin-right:8px;">
+                   <img class="company-logo" src="images/walmart.jpeg"  alt="Walmart Logo" style="width:24px; height:24px; vertical-align:middle; margin-right:8px;">
                    Walmart Inc
                  </h3>
                  <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
