logo width changed

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="row item">
                <div class="twelve columns">
                  <h3>
-                   <img class="company-logo" src="https://logo.clearbit.com/walmart.com"  alt="Walmart Logo" style="width:24px; height:24px; vertical-align:middle; margin-right:8px;">
+                   <img class="company-logo" src="https://logo.clearbit.com/walmart.com"  alt="Walmart Logo" style="width:30px; height:30px; vertical-align:middle; margin-right:8px;">
                    Walmart Inc
                  </h3>
                  <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
@@ -156,7 +156,7 @@
             </div>
             <div class="row item">
                <div class="twelve columns">
-                  <h3> <img src="https://logo.clearbit.com/americanexpress.com" style="width:24px; margin-right:8px;">American Express | Eficens Systems Inc</h3>
+                  <h3> <img src="https://logo.clearbit.com/americanexpress.com" style="width:30px;height:30px; margin-right:8px;">American Express | Eficens Systems Inc</h3>
                   <p class="info"> Software (DevOps) Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Dec 2023</em></p>
                   <ul>
                      <li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies and implement effective solutions.</li>
@@ -178,7 +178,7 @@
             </div>
             <div class="row item">
                <div class="twelve columns">
-                  <h3><img src="https://logo.clearbit.com/benedsoft.com" style="width:24px; margin-right:8px;">Bened Software Solutions Inc</h3>
+                  <h3><img src="https://logo.clearbit.com/benedsoft.com" style="width:30px;height:30px; margin-right:8px;">Bened Software Solutions Inc</h3>
                   <p><strong></strong> Software DevOps Engineer <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
                   <ul>
                      <li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and Kubernetes, resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
@@ -191,7 +191,7 @@
             </div>
             <div class="row item">
                <div class="twelve columns">
-                  <h3> <img src="https://logo.clearbit.com/amazon.com" style="width:24px; margin-right:8px;"> Amazon, India</h3>
+                  <h3> <img src="https://logo.clearbit.com/amazon.com" style="width:30px;height:30px; margin-right:8px;"> Amazon, India</h3>
                   <p><strong></strong> Analyst <span>&bull;</span> <em class="date">Oct 2017 - Jul 2018</em></p>
                   <ul>
                      <li>Supported the beta phase and real-time phase of the development projects (TRON operations and machine learning process) that are implemented and developed in MKE-1 fulfillment centers as a non-variable associate. </li>
