--- a/index.html
+++ b/index.html
@@ -155,8 +155,14 @@
                </div>
             </div>
             <div class="row item">
-               <div class="twelve columns">
-                  <h3> <img src="https://logo.clearbit.com/americanexpress.com" style="width:30px;height:30px; margin-right:8px;">American Express | Eficens Systems Inc</h3>
+                  <div class="twelve columns">
+                    <h3 style="display: flex; align-items: center; gap: 10px;">
+                      <img 
+                        src="https://logo.clearbit.com/americanexpress.com" 
+                        alt="American Express Logo" 
+                        style="width:28px; height:28px; border-radius: 4px;">
+                      American Express | Eficens Systems Inc
+                    </h3>
                   <p class="info"> Software (DevOps) Engineer <span>&bull; </span> <em class="date"> Jan 2021 - Dec 2023</em></p>
                   <ul>
                      <li>Worked in a diverse range of tasks, from infrastructure migration to coding and automation. Proven ability to adapt quickly to new technologies and implement effective solutions.</li>
